[metadata]
name = rda-package
version = 0.0.4
author = VESTUArthur
author_email = vestuarthur@gmail.com
description = rhythmic data analysis package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VESTUArthur/RDA
project_urls =
    Bug Tracker = https://github.com/VESTUArthur/RDA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    pandas
    sklearn
    plotly
    rpy2
    CosinorPy
    matplotlib
    matplotlib_venn
    seaborn
    statsmodels